--- a/utils/install
+++ b/utils/install
@@ -8,7 +8,7 @@
 #    http://purl.org/twc/projects/prov-lodspeakr/install
 #       303 redirects to this script.
 
-lodspeakr_repository="git@github.com:timrdf/prov-lodspeakr.git"
+lodspeakr_repository="git://github.com/timrdf/prov-lodspeakr.git"
 home=`basename $lodspeakr_repository | sed 's/.git//'`
 
 source ~/.bashrc
